--- a/index.html
+++ b/index.html
@@ -1,70 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Traditional mole catching and rural pest control services in Wales. Reliable, local, and environmentally-friendly solutions for farms and countryside properties.">
-  <meta name="keywords" content="mole catcher Wales, farm pest control, Welsh pest control, traditional mole trapping, rural pest solutions, wasp removal, rat control, squirrel pest control">
-  <meta name="author" content="Welsh Mole Catcher">
-  <title>Welsh Mole Catcher | Traditional Mole Trapping & Rural Pest Control</title>
-  <link rel="icon" href="favicon.ico">
-  <link rel="apple-touch-icon" href="apple_touch_icon.png">
-  <link rel="stylesheet" href="mobile.css" media="only screen and (max-width: 768px)">
-  <link rel="stylesheet" href="desktop.css" media="only screen and (min-width: 769px)">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Traditional mole catching and pest control in Welsh countryside. Reliable, family-run service for farms and rural homes." />
+  <meta name="keywords" content="mole catching Wales, pest control farm, Welsh mole catcher, rural pest services, traditional mole traps" />
+  <meta name="author" content="Welsh Mole Catcher" />
+  <title>Welsh Mole Catcher | Farm Mole Control in Wales</title>
+  <link rel="icon" href="favicon.ico" />
+  <link rel="stylesheet" href="mobile.css" media="only screen and (max-width: 768px)" />
+  <link rel="stylesheet" href="desktop.css" media="only screen and (min-width: 769px)" />
 </head>
+
 <body>
   <header class="site-header">
-    <img src="logo.png" alt="Welsh Mole Catcher logo" class="logo">
+    <img src="logo.png" alt="Welsh Mole Catcher Logo" class="logo" />
     <h1>Welsh Mole Catcher</h1>
-    <p>Traditional Trapping. Trusted Results.</p>
+    <p>Traditional Mole Control for Farms & Rural Homes</p>
   </header>
 
   <section class="intro-text">
-    <h2>Traditional Mole Catching Specialist</h2>
-    <p>
-      At Welsh Mole Catcher, I specialize in professional mole control using traditional trapping methods. Based in the heart of the countryside, I focus on protecting farms, paddocks, and rural homes from mole damage—no poisons, no gimmicks, just results you can trust.
-    </p>
-  </section>
-
-  <section class="services-text">
-    <h2>Rural Pest Control Services</h2>
-    <p>
-      While mole catching is my main expertise, I also offer pest control for rats, mice, wasps, and squirrels—particularly where rural life meets the wild. Whether you’re dealing with pests in a barn, garden, or outbuilding, I provide a reliable, local service.
-    </p>
+    <h2>Reliable Mole Catching Across Wales</h2>
+    <p>We specialize in traditional mole trapping across farms and countryside homes throughout South and Mid Wales. Our family-run business is rooted in rural life and understands the unique challenges landowners face.</p>
   </section>
 
   <section class="mole-focus">
-    <h2>Focused on Farms and the Countryside</h2>
-    <p>
-      My services are tailored for farmers and landowners who need fast, effective solutions. Trapping is a safe, environmentally friendly way to manage mole populations and protect your fields.
-    </p>
+    <h2>Mole Control for Farms</h2>
+    <p>Our main focus is moles. Using safe, traditional traps, we offer effective mole control that’s friendly to your land and livestock.</p>
+    <p>We also offer help with rats, mice, wasps, bees, and squirrels on farms and in rural homes.</p>
   </section>
 
   <section class="photo-gallery">
-    <h3>Mole Catching in Action</h3>
+    <h2>Mole Catching in Action</h2>
     <div class="gallery-grid">
       <figure>
-        <img src="moles_collage.jpg" alt="Multiple mole catches on different farms in Wales" title="Successful mole catches across Welsh farms" loading="lazy">
+        <img src="moles_collage.jpg" alt="Moles caught on Welsh farms" title="Successful mole catches" />
         <figcaption>Mole Catch Highlights</figcaption>
       </figure>
       <figure>
-        <img src="farm_moles.jpg" alt="Dead moles lined up on a Welsh farm after pest control visit" title="Traditional mole trapping results on a Welsh farm" loading="lazy">
-        <figcaption>Farm Mole Trapping Results</figcaption>
+        <img src="farm_moles.jpg" alt="Dead moles on a Welsh farm" title="Farm Mole Control Results" />
+        <figcaption>Farm Results</figcaption>
       </figure>
       <figure>
-        <img src="farm_son.jpg" alt="Father and son working together on mole control on a farm" title="Family-run mole control team at work" loading="lazy">
-        <figcaption>Family Run, Local Service</figcaption>
+        <img src="farm_son.jpg" alt="Father and son team mole trapping" title="Family-run mole catching" />
+        <figcaption>Family Team</figcaption>
       </figure>
       <figure>
-        <img src="farm_john_mole.jpg" alt="Experienced mole catcher with a successful catch" title="John hard at work in the Welsh hills" loading="lazy">
-        <figcaption>Years of Experience</figcaption>
+        <img src="farm_john_mole.jpg" alt="Mole catching expert in field" title="Traditional countryside mole catcher" />
+        <figcaption>In The Field</figcaption>
       </figure>
     </div>
   </section>
 
   <footer class="site-footer">
-    <p>&copy; 2025 Welsh Mole Catcher. All rights reserved.</p>
-    <p><a href="https://www.welshtownandcountry.co.uk">Visit main site</a></p>
+    <p>&copy; 2025 Welsh Mole Catcher | <a href="https://www.welshtownandcountry.co.uk">Back to Main Site</a></p>
   </footer>
 </body>
 </html>
