--- a/index.html
+++ b/index.html
@@ -15,8 +15,10 @@
 <body>
   <header class="site-header">
     <img src="logo.png" alt="Welsh Mole Catcher Logo" class="logo" />
-    <h1>Welsh Mole Catcher</h1>
-    <p>Traditional Mole Control for Farms & Rural Homes</p>
+    <div class="header-text">
+      <h1>Welsh Mole Catcher</h1>
+      <p>Traditional Mole Control for Farms & Rural Homes</p>
+    </div>
   </header>
 
   <section class="intro-text">
