--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="keywords" content="mole catching Wales, pest control farm, Welsh mole catcher, rural pest services, traditional mole traps" />
   <meta name="author" content="Welsh Mole Catcher" />
   <title>Welsh Mole Catcher | Farm Mole Control in Wales</title>
-  <link rel="icon" href="favicon.ico" />
+  <link rel="icon" href="favicon.ico" type="image/x-icon" />
   <link rel="stylesheet" href="mobile.css" media="only screen and (max-width: 768px)" />
   <link rel="stylesheet" href="desktop.css" media="only screen and (min-width: 769px)" />
 </head>
