--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         transition={{ duration: 1 }}
         className="relative flex flex-col items-center justify-center h-[400px] text-white bg-[url('moles_collage.jpg')] bg-cover bg-center shadow-inner text-center header-overlay"
       >
-        <img src="logo.png" alt="Welsh Mole Catcher Logo" className="w-[120px] mb-4 rounded-xl" />
+        <img src="logo.png" alt="Welsh Mole Catcher Logo" className="w-[120px] mb-4 rounded-xl" onError={(e) => { e.target.src = 'https://via.placeholder.com/120?text=Logo'; }} />
         <h1 className="text-4xl md:text-5xl font-bold">Welsh Mole Catcher</h1>
         <p className="text-lg md:text-xl mt-2 text-[#e0e0e0]">Traditional Mole Control for Farms & Rural Homes</p>
       </motion.header>
@@ -124,7 +124,12 @@
                   className="bg-white rounded-xl overflow-hidden shadow-md cursor-pointer"
                   onClick={() => setSelectedImage(img)}
                 >
-                  <img src={img.src} alt={img.alt} className="w-full h-48 object-cover gallery-img" />
+                  <img 
+                    src={img.src} 
+                    alt={img.alt} 
+                    className="w-full h-48 object-cover gallery-img" 
+                    onError={(e) => { e.target.src = 'https://via.placeholder.com/300x200?text=' + img.caption; }}
+                  />
                   <figcaption className="text-center py-2 bg-[#eee6da] text-[#4a3b30]">{img.caption}</figcaption>
                 </motion.figure>
               ))}
@@ -170,11 +175,12 @@
             <p className="text-[#3c3c3c] mb-4">
               Call us at <a href="tel:07375303124" className="text-[#2c2c2c] hover:text-[#785f45]">07375 303124</a> or use the form below:
             </p>
-            <div>
+            <form onSubmit={handleSubmit}>
               <div className="mb-4">
-                <label className="block text-[#3c3c3c] mb-1">Name</label>
+                <label className="block text-[#3c3c3c] mb-1" htmlFor="name">Name</label>
                 <input
                   type="text"
+                  id="name"
                   name="name"
                   value={formData.name}
                   onChange={handleChange}
@@ -183,9 +189,10 @@
                 />
               </div>
               <div className="mb-4">
-                <label className="block text-[#3c3c3c] mb-1">Email</label>
+                <label className="block text-[#3c3c3c] mb-1" htmlFor="email">Email</label>
                 <input
                   type="email"
+                  id="email"
                   name="email"
                   value={formData.email}
                   onChange={handleChange}
@@ -194,8 +201,9 @@
                 />
               </div>
               <div className="mb-4">
-                <label className="block text-[#3c3c3c] mb-1">Message</label>
+                <label className="block text-[#3c3c3c] mb-1" htmlFor="message">Message</label>
                 <textarea
+                  id="message"
                   name="message"
                   value={formData.message}
                   onChange={handleChange}
@@ -205,12 +213,12 @@
                 ></textarea>
               </div>
               <button
-                onClick={handleSubmit}
+                type="submit"
                 className="w-full bg-[#3e2d20] text-white p-2 rounded hover:bg-[#785f45] transition-colors"
               >
                 Send Message
               </button>
-            </div>
+            </form>
           </div>
         </motion.section>
       );
@@ -240,7 +248,12 @@
       </div>
     );
 
-    ReactDOM.render(<App />, document.getElementById("root"));
+    try {
+      const root = ReactDOM.createRoot(document.getElementById("root"));
+      root.render(<App />);
+    } catch (e) {
+      console.error("Rendering failed:", e);
+    }
   </script>
 </body>
 </html>
