--- a/index.html
+++ b/index.html
@@ -13,20 +13,262 @@
   <script src="https://cdn.jsdelivr.net/npm/react-dom@18.2.0/umd/react-dom.production.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@babel/standalone@7.23.2/babel.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/framer-motion@10.16.4/dist/framer-motion.js"></script>
-  <script src="https://cdn.tailwindcss.com"></script>
+  <style>
+    /* Minimal Tailwind CSS build for GitHub Pages */
+    :root {
+      --color-white: #fff;
+      --color-gray-100: #f5f1ec;
+      --color-gray-600: #3c3c3c;
+      --color-gray-800: #333;
+      --color-brown-700: #3e2d20;
+      --shadow-md: 0 4px 6px rgba(0, 0, 0, 0.1);
+      --shadow-inner: inset 0 2px 4px rgba(0, 0, 0, 0.05);
+    }
+    * {
+      box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+    }
+    .container {
+      width: 100%;
+      max-width: 1280px;
+      margin-left: auto;
+      margin-right: auto;
+    }
+    .mx-auto {
+      margin-left: auto;
+      margin-right: auto;
+    }
+    .flex {
+      display: flex;
+    }
+    .flex-col {
+      flex-direction: column;
+    }
+    .items-center {
+      align-items: center;
+    }
+    .justify-center {
+      justify-content: center;
+    }
+    .justify-between {
+      justify-content: space-between;
+    }
+    .space-x-6 > * + * {
+      margin-left: 1.5rem;
+    }
+    .grid {
+      display: grid;
+    }
+    .grid-cols-1 {
+      grid-template-columns: repeat(1, minmax(0, 1fr));
+    }
+    .sm\:grid-cols-2 {
+      @media (min-width: 640px) {
+        grid-template-columns: repeat(2, minmax(0, 1fr));
+      }
+    }
+    .lg\:grid-cols-4 {
+      @media (min-width: 1024px) {
+        grid-template-columns: repeat(4, minmax(0, 1fr));
+      }
+    }
+    .gap-6 {
+      gap: 1.5rem;
+    }
+    .gap-8 {
+      gap: 2rem;
+    }
+    .bg-white {
+      background-color: var(--color-white);
+    }
+    .bg-\[\#f5f1ec\] {
+      background-color: var(--color-gray-100);
+    }
+    .bg-\[\#333\] {
+      background-color: var(--color-gray-800);
+    }
+    .bg-\[\#3e2d20\] {
+      background-color: var(--color-brown-700);
+    }
+    .bg-\[\#eee6da\] {
+      background-color: #eee6da;
+    }
+    .text-white {
+      color: var(--color-white);
+    }
+    .text-\[\#e0e0e0\] {
+      color: #e0e0e0;
+    }
+    .text-\[\#3c3c3c\] {
+      color: var(--color-gray-600);
+    }
+    .text-\[\#3e2d20\] {
+      color: var(--color-brown-700);
+    }
+    .text-\[\#4a3b30\] {
+      color: #4a3b30;
+    }
+    .text-\[\#2c2c2c\] {
+      color: #2c2c2c;
+    }
+    .hover\:text-\[\#cbb89d\]:hover {
+      color: #cbb89d;
+    }
+    .hover\:text-\[\#785f45\]:hover {
+      color: #785f45;
+    }
+    .hover\:bg-\[\#785f45\]:hover {
+      background-color: #785f45;
+    }
+    .text-lg {
+      font-size: 1.125rem;
+    }
+    .text-xl {
+      font-size: 1.25rem;
+    }
+    .text-3xl {
+      font-size: 1.875rem;
+    }
+    .text-4xl {
+      font-size: 2.25rem;
+    }
+    .md\:text-5xl {
+      @media (min-width: 768px) {
+        font-size: 3rem;
+      }
+    }
+    .md\:text-xl {
+      @media (min-width: 768px) {
+        font-size: 1.25rem;
+      }
+    }
+    .font-bold {
+      font-weight: 700;
+    }
+    .font-semibold {
+      font-weight: 600;
+    }
+    .p-4 {
+      padding: 1rem;
+    }
+    .p-6 {
+      padding: 1.5rem;
+    }
+    .py-2 {
+      padding-top: 0.5rem;
+      padding-bottom: 0.5rem;
+    }
+    .py-6 {
+      padding-top: 1.5rem;
+      padding-bottom: 1.5rem;
+    }
+    .py-12 {
+      padding-top: 3rem;
+      padding-bottom: 3rem;
+    }
+    .px-4 {
+      padding-left: 1rem;
+      padding-right: 1rem;
+    }
+    .mb-4 {
+      margin-bottom: 1rem;
+    }
+    .mt-2 {
+      margin-top: 0.5rem;
+    }
+    .h-48 {
+      height: 12rem;
+    }
+    .h-\[400px\] {
+      height: 400px;
+    }
+    .w-full {
+      width: 100%;
+    }
+    .w-\[120px\] {
+      width: 120px;
+    }
+    .max-w-5xl {
+      max-width: 64rem;
+    }
+    .max-w-lg {
+      max-width: 32rem;
+    }
+    .rounded {
+      border-radius: 0.25rem;
+    }
+    .rounded-xl {
+      border-radius: 0.75rem;
+    }
+    .border {
+      border-width: 1px;
+    }
+    .border-\[\#cbb89d\] {
+      border-color: #cbb89d;
+    }
+    .border-b-2 {
+      border-bottom-width: 2px;
+    }
+    .focus\:outline-none:focus {
+      outline: none;
+    }
+    .focus\:border-\[\#785f45\]:focus {
+      border-color: #785f45;
+    }
+    .shadow-md {
+      box-shadow: var(--shadow-md);
+    }
+    .shadow-inner {
+      box-shadow: var(--shadow-inner);
+    }
+    .bg-cover {
+      background-size: cover;
+    }
+    .bg-center {
+      background-position: center;
+    }
+    .object-cover {
+      object-fit: cover;
+    }
+    .sticky {
+      position: sticky;
+    }
+    .top-0 {
+      top: 0;
+    }
+    .z-10 {
+      z-index: 10;
+    }
+    .cursor-pointer {
+      cursor: pointer;
+    }
+    .text-center {
+      text-align: center;
+    }
+    .inline-block {
+      display: inline-block;
+    }
+    .transition-colors {
+      transition: color 0.3s ease, background-color 0.3s ease;
+    }
+    .hover\:underline:hover {
+      text-decoration: underline;
+    }
+  </style>
 </head>
 <body>
   <div id="root"></div>
   <script type="text/babel">
     const { useState } = React;
-    const { motion } = window.FramerMotion;
+    const motion = window.FramerMotion.motion; // Fixed Framer Motion import
 
     const Navbar = () => (
       <motion.nav
         initial={{ y: -100 }}
         animate={{ y: 0 }}
         transition={{ duration: 0.5 }}
-        className="bg-[#333] text-white p-4 sticky top-0 z-10 shadow-lg"
+        className="bg-[#333] text-white p-4 sticky top-0 z-10 shadow-md"
       >
         <div className="container mx-auto flex justify-between items-center">
           <div className="text-xl font-bold">Welsh Mole Catcher</div>
